tests/core/snapshots/test-scalars-integers.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": 125,
      "b": 3147483647
    }
  }
}
