tests/core/snapshots/test-scalars-integers.md_3.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": 47486461565,
      "b": 9823372036854775807
    }
  }
}
