tests/core/snapshots/test-scalars-integers.md_5.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": 32147483647,
      "b": 48645648645
    }
  }
}
