tests/core/snapshots/test-scalars-integers.md_6.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": 32767,
      "b": 63535
    }
  }
}
